welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:17: error: not found: value avance5
	faireMotif();avance5();
                     ^